Security Updates
Since the pre-release has some high findings patches, changing to use
this and pulling the same content out of the .deb file that the related
section was then tar'd up.

The dom4j package still had 1 crit and high finding; manually patching
this.

security